--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "melodyc-npm",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "tone": "^15.0.4",
-    "webmidi": "^3.1.12"
+    "tone": "^14.7.77",
+    "webmidi": "^3.1.7"
   }
 }
