--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "tone": "^14.7.77",
-    "webmidi": "^3.1.7"
+    "webmidi": "^3.1.7",
+    "soundfont-player": "^0.12.0"
   }
 }
