--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "build": "cp *.{html,css,js} dist/",
+    "dev": "npx serve .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,5 +16,8 @@
     "tone": "^14.7.77",
     "webmidi": "^3.1.7",
     "soundfont-player": "^0.12.0"
+  },
+  "devDependencies": {
+    "serve": "^14.2.1"
   }
 }
