--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "npx serve .",
+    "dev": "npx serve . --ssl-cert ./cert.pem --ssl-key ./key.pem",
+    "dev:setup": "openssl req -x509 -newkey rsa:2048 -keyout key.pem -out cert.pem -days 365 -nodes -subj '/CN=localhost'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
