--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "http-server . -p 8080 --cors='*' -c-1 -o",
+    "build": "echo 'Building...' && cp *.{html,css,js} dist/",
+    "start": "http-server dist -p $PORT",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
