--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "http-server . -p 8080 --cors='*' -c-1 -o",
-    "build": "echo 'Building...' && cp *.{html,css,js} dist/",
-    "start": "http-server dist -p $PORT",
+    "dev": "http-server . -p 8080 --cors -c-1",
+    "build": "echo 'No build step required'",
+    "start": "http-server . -p $PORT",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
