--- a/vercel.json
+++ b/vercel.json
@@ -11,12 +11,13 @@
       "src": "/(.*)",
       "dest": "/$1",
       "headers": {
-        "Permissions-Policy": "midi=*, autoplay=*",
+        "Permissions-Policy": "midi=self",
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type",
         "Cross-Origin-Opener-Policy": "same-origin",
         "Cross-Origin-Embedder-Policy": "require-corp",
+        "Cross-Origin-Resource-Policy": "same-site",
         "Cache-Control": "no-cache, no-store, must-revalidate"
       }
     }
