--- a/vercel.json
+++ b/vercel.json
@@ -11,13 +11,14 @@
       "src": "/(.*)",
       "dest": "/$1",
       "headers": {
-        "Permissions-Policy": "midi=(self)",
+        "Permissions-Policy": "midi=*",
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type",
         "Cross-Origin-Opener-Policy": "same-origin",
         "Cross-Origin-Embedder-Policy": "require-corp",
-        "Cross-Origin-Resource-Policy": "cross-origin",
+        "Cross-Origin-Resource-Policy": "same-origin",
+        "Cross-Origin-Isolation": "require-corp",
         "Cache-Control": "no-cache, no-store, must-revalidate"
       }
     }
