✨ feat: MIDIアクセス機能の大幅な改善
- UIの改善
  - ステータス表示の追加
  - デバッグ情報パネルの実装
  - レスポンシブデザインの強化
- MIDI機能の強化
  - 接続状態の詳細表示
  - 自動再接続機能の実装
  - エラーハンドリングの改善
- セキュリティ設定の最適化
  - Permissions-Policyの拡充
  - Cross-Origin関連ヘッダーの追加
  - Feature-Policyの追加

--- a/vercel.json
+++ b/vercel.json
@@ -11,14 +11,15 @@
       "src": "/(.*)",
       "dest": "/$1",
       "headers": {
-        "Permissions-Policy": "midi=*",
+        "Permissions-Policy": "midi=*, autoplay=*, cross-origin-isolated=*",
         "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type",
+        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, midi",
         "Cross-Origin-Opener-Policy": "same-origin",
         "Cross-Origin-Embedder-Policy": "require-corp",
-        "Cross-Origin-Resource-Policy": "same-origin",
+        "Cross-Origin-Resource-Policy": "cross-origin",
         "Cross-Origin-Isolation": "require-corp",
+        "Feature-Policy": "midi *",
         "Cache-Control": "no-cache, no-store, must-revalidate"
       }
     }
